--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
     <h2>Output</h2>
     <div id="result" aria-live="polite"></div>
   </section>
-  <script type="module" src="js/main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
